[gd_scene load_steps=13 format=3 uid="uid://lxsbkit3tuy6"]

[ext_resource type="Texture2D" uid="uid://ci3g3msj8jsjp" path="res://Visual Assets/Sprites/Props/Lamppost-Sheet.png" id="1_6gnxi"]
[ext_resource type="Script" path="res://Scripts/Lamp.gd" id="1_6vjlv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2myea"]
atlas = ExtResource("1_6gnxi")
region = Rect2(0, 0, 12, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uwpu"]
atlas = ExtResource("1_6gnxi")
region = Rect2(12, 0, 12, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqrgl"]
atlas = ExtResource("1_6gnxi")
region = Rect2(24, 0, 12, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_mpmd2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2myea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uwpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqrgl")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="Gradient" id="Gradient_0v0ct"]
offsets = PackedFloat32Array(0, 0.310897, 0.996795, 1)
colors = PackedColorArray(0.841951, 0.475811, 0.0853938, 1, 0.425988, 0.242501, 0.0468294, 1, 0.0179725, 0.013648, 0.00900185, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0mk2s"]
gradient = SubResource("Gradient_0v0ct")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 1)
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_vw31r"]
offsets = PackedFloat32Array(0, 0.0929487, 1)
colors = PackedColorArray(0.843137, 0.47451, 0.0862745, 1, 0.443188, 0.249422, 0.0453494, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_eqyd5"]
gradient = SubResource("Gradient_vw31r")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m18l4"]
size = Vector2(4, 10)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4hf5k"]
radius = 60.0
height = 150.0

[node name="Lamp" type="StaticBody2D"]
z_index = 1
y_sort_enabled = true
script = ExtResource("1_6vjlv")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
light_mask = 9
visibility_layer = 9
sprite_frames = SubResource("SpriteFrames_mpmd2")
autoplay = "default"
frame_progress = 0.59044
centered = false
offset = Vector2(-6, -48)

[node name="MainLight" type="PointLight2D" parent="."]
position = Vector2(0, 14)
scale = Vector2(0.7, 0.55)
energy = 1.5
texture = SubResource("GradientTexture2D_0mk2s")
texture_scale = 3.5

[node name="DecorLight" type="PointLight2D" parent="."]
light_mask = 8
visibility_layer = 8
position = Vector2(0, -40)
scale = Vector2(0.1, 0.1)
texture = SubResource("GradientTexture2D_eqyd5")
texture_scale = 3.5

[node name="Collider" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_m18l4")

[node name="LightRange" type="Area2D" parent="."]
position = Vector2(0, 14)

[node name="Hitbox" type="CollisionShape2D" parent="LightRange"]
visible = false
rotation = 1.5708
shape = SubResource("CapsuleShape2D_4hf5k")

[connection signal="body_entered" from="LightRange" to="." method="_on_light_range_body_entered"]
[connection signal="body_exited" from="LightRange" to="." method="_on_light_range_body_exited"]
